# sc2f

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: image_buffer.rs  main.rs  ui.rs
