[package]
name = "sc2f"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.0", features = ["derive"]}
log = {version = "0.4.2", features = ["release_max_level_debug"]}
simple_logger = "4.2.0"
