[package]
name = "sc2f"
version = "0.2.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.0", features = ["derive"]}
log = {version = "0.4.2", features = ["release_max_level_debug"]}
simple_logger = "4.2.0"
egui = "0.22.0"
eframe = "0.22.0"
egui_extras = {version = "0.22.0", features = ["image"]}
image = { version = "0.24.7" }
rfd = "0.11.4"
